Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6442

mkfs -G <value> parameter is not changed actually and default value is applied

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      mkfs.lustre util checks if parametrs already contain "flex_bg"
      option (number of block groups that will be packed together
      to create a larger virtual block group) and adds this option
      if it doesn't exists. But second parameter "-G" (number of block
      groups that will be packed together to create a larger virtual
      block group) can be added twice: one passed trough mkfs options
      and another one - default value. In this case this parameter
      is not changed actually and default value is applied.
      This patch adds extra check. Default option "-G" is added
      only if no "-G" option passed through mkfs options.

            emoly.liu Emoly Liu
            artem_blagodarenko Artem Blagodarenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: